--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,10 @@
     "prettier:check": "prettier --check .",
     "lint": "eslint --fix .",
     "lint:check": "eslint .",
-    "run": "ts-node src/main.ts",
+    "run": "tsx src/main.ts",
     "tsc": "tsc -b"
   },
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "dedent": "^1.6.0",
     "firebase-admin": "^13.4.0",
@@ -32,7 +32,7 @@
     "eslint": "^9.34.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "prettier": "^3.6.2",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.40.0"
   }
