--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,9 @@
     "@types/signale": "^1.4.7",
     "@types/yargs": "^17.0.33",
     "eslint": "^9.34.0",
+    "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unicorn": "^60.0.0",
     "prettier": "^3.6.2",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
