--- a/server/tsconfig.base.json
+++ b/server/tsconfig.base.json
@@ -1,24 +1,31 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "rootDir": ".",
     "outDir": "build/default",
 
-    "strict": true,
-    "alwaysStrict": true,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "preserveConstEnums": true,
-    "newLine": "lf",
+    "lib": ["ESNext"],
+    "target": "ESNext",
+    "module": "Preserve",
+    "moduleDetection": "force",
 
-    "composite": true,
-    "noEmitOnError": true,
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "verbatimModuleSyntax": true,
 
     "allowSyntheticDefaultImports": true,
-    "allowUnusedLabels": false,
     "allowUnreachableCode": true,
+    "allowUnusedLabels": false,
+    "alwaysStrict": true,
+    "emitDeclarationOnly": true,
+    "erasableSyntaxOnly": true,
+    "esModuleInterop": true,
     "exactOptionalPropertyTypes": true,
+    "experimentalDecorators": false,
+    "isolatedDeclarations": true,
+    "isolatedModules": true,
+    "newLine": "lf",
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
@@ -26,8 +33,13 @@
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "isolatedModules": true,
+    "preserveConstEnums": true,
+    "pretty": true,
+    "rewriteRelativeImportExtensions": true,
+    "skipLibCheck": true,
+    "sourceMap": false,
+    "strict": true,
 
-    "types": []
+    "types": ["node"]
   }
 }
