--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -2,7 +2,7 @@ on:
   pull_request:
     paths:
       - .github/workflows/server.yml
-      - server/
+      - server/**
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
